# lughat-althuban

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  HANDOVER-LARGE-PACKETS.md  MANIFEST.in  README.md  ROADMAP-PHASE-B.md  ROADMAP-PHASE-C.md  ROADMAP-PHASE-D.md  pr_body.txt  pr_body_0004.txt  pr_body_0005.txt  pr_body_0006.txt  pyproject.toml
.claude/commands/: new-packet.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: claim-packet.md  propose-arabic-term.md  propose-new-packet.md
.github/workflows/: ci.yml  pages.yml  publish.yml
apps/: تحليل_اخبار.apy  حاسبة_علمية.apy  خادم_ويب.apy  مدير_مهام.apy
apps/prayer_times/: test_import.apy  الحساب.apy  الرئيسي.apy  المدن.apy
apps/search_engine/: indexer.apy  normalizer.apy  ranker.apy
arabicpython/: __init__.py  _generated_messages.py  _generated_traceback_data.py  cli.py  dialect.py  formatter.py  import_hook.py  linter.py  messages.py  normalize.py  pip_wrapper.py  pretokenize.py  pytest_plugin.py  repl.py  reverse.py  test_runner.py  tracebacks.py  translate.py
arabicpython/aliases/: __init__.py  _finder.py  _loader.py  _proxy.py  aiohttp.toml  alias_runtime.toml  anthropic.toml  argparse.toml  asyncio.toml  asyncpg.toml  bs4.toml  calendar.toml  celery.toml  click.toml  collections.toml  contextlib.toml  csv.toml  datetime.toml  django.toml  docx.toml  dotenv.toml  fastapi.toml  fastapi_testclient.toml  flask.toml  functools.toml  hashlib.toml  httpx.toml  io.toml  itertools.toml  json.toml  jwt.toml  langchain_core.toml  logging.toml  math.toml  matplotlib.toml  mongomock.toml  numpy.toml  openai.toml  openpyxl.toml  os.toml  (+33 more)
arabicpython/dictionaries/: __init__.py  ar-v2.md
arabicpython/lsp/: server.py
arabicpython_kernel/: __init__.py  __main__.py  kernel.py
decisions/: 0001-architecture.md  0002-file-extension.md  0003-keyword-dictionary.md  0004-normalization-policy.md  0005-numerals-punctuation.md  0006-bidi-policy.md  0007-scope.md  0009-bidi-control-marks-extension.md  0010-dictionary-versioning.md  0011-phase-c-charter.md  0012-phase-d-charter.md  README.md
dictionaries/: AUDIT-exceptions-cross-file-2026-04-20.md  README.md  ar-v1.1.md  ar-v1.md  ar-v2.md  exceptions-ar-v1.md
docs/: arabic-python-challenges.md  brand.css  cookbook-ar-glossary.md  cookbook-ar.md  gallery.html  getting-started-ar.md  index.html  playground.html  tutorial-ar.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/ar/: CHANGELOG.md  README.md  alias-policy.md  aliases-index.md  cookbook.md  coverage-matrix.md  educator-guide.md  exception-policy.md  getting-started.md  glossary.md  known-limitations.md  lexicon.md  naming-policy.md  normalization-and-bidi.md  overview.md  release-checklist.md  stdlib-reference.md  troubleshooting.md
docs/games/: حارس_الكويكبات.apy  قفزة_المدينة.apy  كنز_الصحراء.apy
docs/showcases/: مدينة_ذكية.apy
docs/wiki/: ai-aliases.md  architecture.md  builtins.md  exceptions.md  faq.md  index.md  keywords.md  media-aliases.md  science-aliases.md  stdlib-aliases.md  tooling.md  web-aliases.md
editors/vscode/: package.json
examples/: 07_imports.apy  B10_flask_hello.apy  B30_filesystem_walk.apy  B33_data_storage.apy  B34_text_processing.apy  B35_numerics.apy  B37_async_demo.apy  B38_utilities_demo.apy  B40_README-ar.md  B40_async_demo.apy  B40_match_demo.apy  B57_seaborn_demo.apy  B58_scipy_demo.apy  B59_aiohttp_demo.apy  C10_matplotlib_demo.apy  C11_sklearn_demo.apy  C12_pydantic_demo.apy  C13_httpx_demo.apy  C14_click_demo.apy  C15_rich_demo.apy  C16_redis_demo.apy  C17_celery_demo.apy  C18_pymongo_demo.apy  C19_asyncpg_demo.apy  C20_openpyxl_demo.apy  C21_docx_demo.apy  C22_dotenv_demo.apy  C23_yaml_demo.apy  C24_playwright_demo.apy  C25_bs4_demo.apy  C26_jwt_demo.apy  C30_ar_v2_demo.apy  C40_full_stack_demo.apy  D02_anthropic_demo.apy  D02_langchain_core_demo.apy  D02_openai_demo.apy  D02_sentence_transformers_demo.apy  D02_transformers_demo.apy  README-ar.md  README.md  (+1 more)
examples/pygame/: C31_pygame_arabic_demo.apy
examples/stdlib/: D04_datetime_demo.apy  D04_json_demo.apy  D04_math_demo.apy  D04_pathlib_demo.apy  D04_random_demo.apy
lexicon/: README.md  core.toml  libraries.toml  messages.toml  schema.json
specs/: 0000-template.md  0002-normalize-v1.delivery.md  0002-normalize-v1.md  0003-dialect-loader-v1.delivery.md  0003-dialect-loader-v1.md  0004-pretokenize-v1.delivery.md  0004-pretokenize-v1.md  0005-core-translate-v1.delivery.md  0005-core-translate-v1.md  0006-cli-v1.delivery.md  0007-import-hook-v1.delivery.md  0007-import-hook-v1.md  0008-repl-v1.delivery.md  0008-repl-v1.md  0009-translated-tracebacks-v1.delivery.md  0009-translated-tracebacks-v1.md  0010-examples-v1.delivery.md  0011-fstring-interior-3-11.delivery.md  0011-fstring-interior-3-11.md  0012-arabic-docs-translation-v1.delivery.md  0013-search-engine-v1.md  0014-prayer-times-v1.delivery.md  0014-prayer-times-v1.md  B-011-aliases-fastapi-v1.md  B-061-errormsg.delivery.md  B012-B013-handoff-brief.md  C-001-pypi-release-v1.delivery.md  C-040-integration-demo-v1.md  INDEX.md  README.md
specs/packets/: C-002-class-proxy.md  C-014-click.md  C-015-rich.md  C-022-dotenv.md  C-023-pyyaml.md  C-026-pyjwt.md  README.md  (+2 more)
tests/: test_aliases_click.py  test_aliases_dotenv.py  test_aliases_jwt.py  test_aliases_requests.py  test_aliases_rich.py  test_aliases_runtime.py  test_aliases_toml_invariants.py  test_aliases_yaml.py  test_c040_integration.py  test_class_proxy.py  test_cli.py  test_dict_v2.py  test_dictionary_v1_1.py  test_examples.py  test_formatter.py  test_import_hook.py  test_jupyter_kernel.py  test_lexicon.py  test_linter.py  test_phase_a_compat.py  test_pip_wrapper.py  test_placeholder.py  test_playground_examples.py  test_prayer_times.py  test_pretokenize.py  test_pytest_plugin.py  test_repl.py  test_reverse.py  test_search_engine.py  test_tracebacks.py  test_tracebacks_arabic.py  test_translate.py  test_tutorial_ar.py
tools/: b061_audit.py  generate_lexicon_outputs.py  generate_vscode_grammar.py  validate_lexicon.py
(+74 files in other folders)
