[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lughat-althuban"
version = "0.3.0"
description = "لغة الثعبان — Arabic-keyword Python dialect with stdlib & library aliases, tooling, and translated tracebacks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "لغة الثعبان contributors" }]
keywords = [
    "python", "arabic", "dialect", "education", "transpiler",
    "alias", "localization", "عربي", "لغة_برمجة",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Arabic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Localization",
]
dependencies = []

[project.urls]
Homepage       = "https://github.com/GalaxyRuler/lughat-althuban"
Documentation  = "https://github.com/GalaxyRuler/lughat-althuban/tree/main/docs"
Repository     = "https://github.com/GalaxyRuler/lughat-althuban"
Changelog      = "https://github.com/GalaxyRuler/lughat-althuban/blob/main/CHANGELOG.md"
"Bug Tracker"  = "https://github.com/GalaxyRuler/lughat-althuban/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "pre-commit>=3.7",
    "requests>=2.32",
    "flask>=3.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "django>=4.2",
    "sqlalchemy>=2.0",
    "Pillow>=10.0",
    "fastapi>=0.100",
    "seaborn>=0.13",
    "scipy>=1.12",
    "aiohttp>=3.9",
]
kernel = [
    "ipykernel>=6.29",
    "jupyter_client>=8.6",
]
all = [
    "lughat-althuban[dev]",
    "lughat-althuban[kernel]",
]

[project.scripts]
"ثعبان" = "arabicpython.cli:main"

[project.entry-points."pytest11"]
apy = "arabicpython.pytest_plugin"

[tool.setuptools.packages.find]
include = ["arabicpython*", "arabicpython_kernel*"]

[tool.setuptools.package-data]
"arabicpython.aliases"      = ["*.toml"]
"arabicpython.dictionaries" = ["*.md"]
"arabicpython_kernel"       = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "network: marks tests that make real HTTP calls (deselect with -m 'not network')",
]
